test/char/invalid.lox
// Too long
print 'aa'; // error: invalid char

// Empty
print ''; // error: invalid char
